fixed addres in footer

--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -61,7 +61,7 @@
     font-family: Roboto;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.72px;
+    line-height: 1.72;
     letter-spacing: 0.03em;
 
 }
