--- a/css/main.css
+++ b/css/main.css
@@ -386,7 +386,7 @@ summary {
   font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.72px;
+  line-height: 1.72;
   letter-spacing: 0.03em;
 }
 
@@ -1136,11 +1136,13 @@ footer {
 
 .contacts {
   color: #ffffff;
+  font-style: normal;
   padding-bottom: 60px;
 }
 
 .contacts a {
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
   margin-bottom: 9px;
 }
 
