--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -24,11 +24,13 @@ footer {
 .contacts {
     @extend %ap;
     color: $white-color;
+    font-style: normal;
     padding-bottom: 60px;
 
     & a {
     @extend %ap;
         color: $footer-w-color;
+        font-style: normal;
         margin-bottom: 9px;
 
     }
